[project]
name = "nasa-ads-mcp"
version = "0.1.0"
description = "MCP server for NASA ADS (Astrophysics Data System) — search, citations, exports, visualizations"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
]

[project.scripts]
nasa-ads-mcp = "nasa_ads_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nasa_ads_mcp"]
